<resources>
    <string name="app_name">GoalList</string>
    <string name="goal_title">goal title</string>
    <string name="select_date">select Date</string>
    <string name="enter_sub_goals">Enter Sub Goals</string>
    <string name="add_goal">Add Goal</string>
    <string name="search">Search</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="edit_goal">edit</string>
    <string name="delete_goal">delete</string>
    <string name="expand_goal">expand</string>
    <string name="data">Data</string>
</resources>