<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/grey">

        <EditText
            android:id="@+id/goalTitle"
            android:layout_margin="10dp"
            android:textColorHint="@color/white"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/goal_title"/>

    </com.google.android.material.card.MaterialCardView>


<com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setDate"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/grey">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/showCalender"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/selectDate"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/select_date"/>
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>
    
    <TextView
        android:id="@+id/subTitle"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_sub_goals"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/currentView"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="visible"/>

    <com.google.android.material.card.MaterialCardView
       android:layout_margin="10dp"
        android:id="@+id/addG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addGoalIcon"
                android:layout_width="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_add_24"/>
            <TextView
                android:id="@+id/addGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_goal"/>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.appcompat.widget.LinearLayoutCompat>